bk_ida/gccida/c2/simplify_subreg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:2942:23: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:2942:55: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:3014:21: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&v11[1] = op[1]; 
                    ^ ~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:3026:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v16.rtwint = ( __int64)v7->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:3038:46: error: use of undeclared identifier 'machine_mode'
v11 = simplify_subreg( outermode, v16.rtx, ( machine_mode)v17, v20); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:3075:43: error: use of undeclared identifier 'machine_mode'
v11 = simplify_subreg( outermode, *v28, ( machine_mode)*( ( unsigned __int8 *)*v28 + 2), byte % v26); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:3090:32: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v12 == v35 && v12 < v9 && mode_class_0[outermode] == MODE_INT ) 
                               ^~~~~~~~~~~~
                               mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/simplify-rtx.c:3115:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[outermode] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_subreg/src/obj/simplify-rtx.o] Error 1
